Bug 471366 - Brush Editor Sizing issues
Summary: Brush Editor Sizing issues
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2023-06-23 07:04 UTC by sh_zam
Modified: 2023-08-05 16:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sh_zam 2023-06-23 07:04:25 UTC
SUMMARY

The issues seem related to each other so I am reporting them here.


STEPS TO REPRODUCE
1. Open brush editor, change the layout to suit your preference, close it and restart Krita, the layout isn't respected upon restart.
2. Open brush editor, try resizing Scratchpad or Presets pane, they both cut off to the points where UI elements aren't visible: https://imgur.com/pB7NQoo.png (this looks like it is caused by wrong sizehints?). This is also true in reverse where increasing size of either will cut off sliders.



ADDITIONAL INFORMATION

I don't think it is due to my desktop environment, since it also happens on Android. But since i3 is bare bones DE please do check for it :))
Comment 1 deppong 2023-07-30 02:00:09 UTC
Hey I am able to reproduce both of these bugs. The layout sizes are not currently saved, and when you move either Scratchpad or Presets it seems to push the other one to the point where the UI is very squished. 

ADDITIONAL INFO
main branch with git hash: 53510ddbd54a3baf22c2f23bd48618a73033b8e8
OS: Artix Linux with KDE Plasma. 

I would love to take a dive into this problem but I'm still very new to contributing/krita. I might ask those in the irc for more guidance into this problem.
Comment 2 Deif Lou 2023-08-05 16:45:18 UTC
Git commit 6c6c90715123583b87a0d8f13f3a76fad21da955 by Deif Lou, on behalf of Isaiah Deppong.
Committed on 05/08/2023 at 16:10.
Pushed by deiflou into branch 'master'.

Add saving QSplitter::sizes() and if brush presets are visible to KisConfig in Brush Presets Editor

M  +44   -8    libs/ui/widgets/kis_paintop_presets_editor.cpp

https://invent.kde.org/graphics/krita/-/commit/6c6c90715123583b87a0d8f13f3a76fad21da955