Add saving QSplitter::sizes() and if brush presets are visible to KisConfig in Brush Presets Editor

BUG:471366